  - cQueue::isEnqueued(cObject *) renamed to cQueue::contains(cObject *)
  - cLinkedList::isInList(void *) renamed to cLinkedList::contains(void *)
Sept 1, 1999
  - behavior of scheduleStart() changed: now it can be called (and does nothing)
    for modules using handleMessage(). The benefit is that this way code that
    creates simple modules dynamically doesn't have to know whether the module
    is using activity() or handleMessage(); the same code (which contains a
    call to scheduleStart()) can be used for both.
  - activate() [the boot procedure for simple module activity()] now checks if
    the message that starts the module is really a starter message (and not
    some other msg). This way, bugs caused by leaving out scheduleStart()
    for dynamically created modules can be detected.
  - wait() now makes sure it is called for a module using activity() and not
    handleMessage().
  - cModuleType now caches the cModuleInterface pointer. (Before it looked
    up the interface each time, based on the interface name.)
Sept 5, 1999
  - cSimpleModule's initialize(), activity(), handleEvent(), finish() made
    protected members so that they cannot be called directly by user code.
  - callInitialize() was added to cSimpleModule to enable calling initialize()
    from user code; callInitialize() was also added for cModule and
    cCompoundModule so that it can be used polimorphically.
  - added cModuleType::createInitStart(char *namestr, cModule *parentmod)
    convenience function to get a module up and running in one step.
    Does create()+buildInside()+callInitialize()+scheduleStart(now).
    Should work for both simple and compound modules.
    Not applicable if the module:
      - has parameters to be set
      - gate vector sizes to be set
      - gates to be connected before initialize()
    Now a simple module can be created on the fly by simply saying:
       mod = modtype->createAndInit("name",this);
       mod->scheduleStart( simTime() );
